# phd-sdm-cs

./: .gitignore  CMakeLists.txt  README.md  cifar10_runner.cu  cifar10_runner.cuh  data_reader.cpp  image_writer.cpp  kernels.cuh  labels_runner.cu  labels_runner.cuh  main.cu  main.cuh  sdm_base.cuh  utils.h
core/: main.cu  main.cuh
core/cuda/: functions.cuh  kernels.cuh
core/data_ops/: data_reader.cpp  data_reader.hpp  image_writer.cpp  image_writer.hpp
core/runners/: cifar10_runner.cu  cs1_runner.cu  cs1_runner.cuh  cs2_runner.cu  cs2_runner.cuh  cs2_s2_runner.cu  cs2_s2_runner.cuh  kanerva_runner.cu  kanerva_runner.cuh  labels_runner.cu  labels_runner.cuh  synth_runner.cu  synth_runner.cuh
core/sdm/: sdm_base.cuh  sdm_cs1.cuh  sdm_cs2.cuh  sdm_cs2_s2.cuh  sdm_cs3.cuh  sdm_cs_reverse.cuh  sdm_jaeckel.cuh  sdm_kanerva.cuh  sdm_kanerva_sparse.cuh  sdm_labels.cuh
core/utils/: utils.cpp  utils.hpp
cuda/: functions.cuh  kernels.cuh
data_ops/: data_reader.cpp  data_reader.hpp  data_writer.cpp  data_writer.h  data_writer.hpp
py/: a.py  aaa.py  aaa2.py  aaaa.py  another_sdm.py  avg_acts.py  b.py  bb.py  bbb.py  bbbb.py  check.py  data_wrangling.py  final.py  generate_masks.py  lp.py  metrics.py  omp.py  plot_nat.py  plots.py  requirements.txt  restore_signal.py  run_compare.py  signals.py  utils.py
py/features/: get_features.py  process_features.py
runners/: base_runner.cuh  cifar10_runner.cu  cifar10_runner.cuh  cs1_runner.cu  cs1_runner.cuh  labels_runner.cu  labels_runner.cuh
sdm/: sdm_cs1.cuh  sdm_jaeckel.cuh  sdm_labels.cuh
utils/: utils.cpp  utils.hpp
